--- a/src/app/how/how.component.html
+++ b/src/app/how/how.component.html
@@ -1,20 +1,21 @@
 <div class="content-wrapper normal">
     <div class="content-inner-wrapper">
-        <h1 class="center">Learn How It Works</h1>
-
+        <h1 class="center">Start Here</h1>
+        <p>
+            Welcome to VISUALZ. When you open the app click new set. A new track with some content will be created for
+            you automatically. You can
+            toggle between the Track List and Content in the left sidebar.
+        </p>
+        <!-- 
+        <p>
+            If you're ready to learn more checkout the <a routerLink="/user-guide">User Guide</a>.
+        </p> -->
         <app-htw></app-htw>
 
 
-        <h2>Crash Course:</h2>
-
+        <!--         
         <p>
-            Welcome to VISUALZ. When you open the app a new blank track will be created for you automatically. You can
-            toggle between the Track List and Content in the left sidebar.
-        </p>
-
-        <p>
-            Add some content by clicking the add content button to open the menu. Start by adding a Gif to your track.
-            Its easy, just click "Gif".
+            Open the content menu by opening the content menu using the conent Add some content by clicking the add content button to open the menu. 
         </p>
 
         <p>
@@ -102,7 +103,7 @@
         <p>
             We are creating more how-to content and resources all the time so check back or contact us if you have any
             questions.
-        </p>
+        </p> -->
 
     </div>
 </div>
