--- a/src/app/htw/htw.component.html
+++ b/src/app/htw/htw.component.html
@@ -1,35 +1,96 @@
 <div class="how-to-app">
-  <img src="../../assets/images/help.png" class="rounded" />
-  <button mat-mini-fab color="primary" class="one"
-    matTooltip="Toggle between your set's tracks &amp; Content options here. Your set can have multiple tracks. Add content to your set by clicking on the content options in the sidebar.">
-    1
-  </button>
-  <button mat-mini-fab color="primary" class="two"
-    matTooltip="Add content like Gifs, Videos, and Images to your track. It's easy! Just start clicking and the content will appear as a content block in the Track Content bottom panel.">
-    2
-  </button>
-  <button mat-mini-fab color="primary" class="three"
-    matTooltip="Your track's content will appear here in this lower panel which is usually only for your main screen or your CrowdScreen. But in most cases its just your main screen. Drag and drop content blocks to change the playback order. Click the trash can to delete the content block.">
-    3
-  </button>
-  <button mat-mini-fab color="primary" class="four"
-    matTooltip="Content settings will appear here when you click on a content block. Different types of content have different settings.">
-    4
-  </button>
-  <button mat-mini-fab color="primary" class="five"
-    matTooltip="The beat analyzer will change color every time a amplitude spike greater than the threshold occurs. This is the flux-capacitor of the VISUALZ software and controls the content playback timing. Basically it looks pretty but you can adjust the threshold in the Track Settings if necessary.">
-    5
-  </button>
-  <button mat-mini-fab color="primary" class="six"
-    matTooltip="Click play to start previewing content playing back with the audio. By default VISUALZ will use the computer's mic for audio input.">
-    6
-  </button>
-  <button mat-mini-fab color="primary" class="seven"
-    matTooltip="Click fullscreen to view over HDMI or VGA to a projector or screen.">
-    7
-  </button>
-  <button mat-mini-fab color="primary" class="eight"
-    matTooltip="The preview window will display the content block you are focused on or the current playing content block if playing.">
-    8
-  </button>
+    <img src="../../assets/images/help.png" class="rounded" />
+
+    <button mat-mini-fab color="primary" class="one"
+        matTooltip="Toggle between your set's tracks. Your set can have multiple tracks.">
+        1
+    </button>
+    <button mat-mini-fab color="primary" class="two" matTooltip="Add scenes to your track. Scenes can consist of any media, 
+        cameras, or visualizations.">
+        2
+    </button>
+    <button mat-mini-fab color="primary" class="three" matTooltip="Switch between the main and mobile controllers.">
+        3
+    </button>
+    <button mat-mini-fab color="primary" class="four" matTooltip="Add gif, image, or video media to your scene.">
+        4
+    </button>
+    <button mat-mini-fab color="primary" class="five" matTooltip="Add a camera device or mobile video.">
+        5
+    </button>
+    <button mat-mini-fab color="primary" class="six"
+        matTooltip="Add a FanCam scene. Audience mobile interactive content.">
+        6
+    </button>
+    <button mat-mini-fab color="primary" class="seven" matTooltip="AlphaViz is an ubervizesque audio visualizer.">
+        7
+    </button>
+    <button mat-mini-fab color="primary" class="eight" matTooltip="Vapor is a vaporwavy audio visualizer.">
+        8
+    </button>
+    <button mat-mini-fab color="primary" class="nine"
+        matTooltip="Add a new track to your set. Sets have tracks. Tracks have controllers. Controllers have scenes.">
+        9
+    </button>
+    <button mat-mini-fab color="primary" class="ten" matTooltip="Edit your set's settings.">
+        10
+    </button>
+    <button mat-mini-fab color="primary" class="eleven" matTooltip="Fullscreen mode.">
+        11
+    </button>
+    <button mat-mini-fab color="primary" class="twelve" matTooltip="Open external window or browser stream window.">
+        12
+    </button>
+    <button mat-mini-fab color="primary" class="thirteen" matTooltip="Move all content to the cloud.">
+        13
+    </button>
+    <button mat-mini-fab color="primary" class="fourteen"
+        matTooltip="Frames per second and milliseconds needed to render a frame statistics.">
+        14
+    </button>
+    <button mat-mini-fab color="primary" class="fifteen"
+        matTooltip="The audio analyzer will display when a scene change event is detcted, the amplitude level, and a realtime BPM estimate.">
+        15
+    </button>
+    <button mat-mini-fab color="primary" class="sixteen" matTooltip="The main preview window.">
+        16
+    </button>
+    <button mat-mini-fab color="primary" class="seventeen"
+        matTooltip="Effects control panel. Different content may have different options.">
+        17
+    </button>
+    <button mat-mini-fab color="primary" class="eighteen" matTooltip="Toggle Track and/or Controller.">
+        18
+    </button>
+    <button mat-mini-fab color="primary" class="nineteen" matTooltip="Toggle Track and/or Controller.">
+        19
+    </button>
+    <button mat-mini-fab color="primary" class="twenty"
+        matTooltip="Play to start the automatic scene changing based on audio analysis.">
+        20
+    </button>
+    <button mat-mini-fab color="primary" class="twentyone" matTooltip="Refresh the current scene.">
+        21
+    </button>
+    <button mat-mini-fab color="primary" class="twentytwo" matTooltip="Clear all scene effects.">
+        22
+    </button>
+    <button mat-mini-fab color="primary" class="twentythree" matTooltip="Randomize scene effects.">
+        23
+    </button>
+    <button mat-mini-fab color="primary" class="twentyfour" matTooltip="Track settings.">
+        24
+    </button>
+    <button mat-mini-fab color="primary" class="twentyfive" matTooltip="Clear track.">
+        25
+    </button>
+    <button mat-mini-fab color="primary" class="twentysix" matTooltip="A scene.">
+        26
+    </button>
+    <button mat-mini-fab color="primary" class="twentyseven" matTooltip="Scene settings/remove scene.">
+        27
+    </button>
+    <button mat-mini-fab color="primary" class="twentyeight" matTooltip="Scene grid.">
+        28
+    </button>
 </div>
