--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -73,6 +73,8 @@
                     <li>Optionally store media in the cloud.</li>
                     <li>Output resolution specification.</li>
                     <li>With permission collect connected audience mobile phone numbers.</li>
+                    <li>Undo.</li>
+                    <li>Much, much, more.</li>
                 </ul>
             </div>
         </div>
@@ -168,10 +170,16 @@
                 images, effects and more.
             </li>
             <li>
-                <mat-icon aria-hidden="false" aria-label="Gif Heaven">gif</mat-icon>
-                <h1>Gif Heaven</h1>
-                <strong>Gif</strong> and image search lets you have access to millions of visuals for your set right
+                <mat-icon aria-hidden="false" aria-label="Gif/Image Search">image_search</mat-icon>
+                <h1>Gif/Image Search</h1>
+                <strong>Gif</strong> &amp; image search lets you have access to millions of visuals for your set right
                 now.
+            </li>
+            <li>
+                <mat-icon aria-hidden="false" aria-label="Gif Heaven">video_library</mat-icon>
+                <h1>CC Video Library</h1>
+                A built in <strong>Creative Commons Video library</strong> gives you access to an evergrowing collection
+                of great visuals.
             </li>
             <li>
                 <mat-icon aria-hidden="false" aria-label="Mic">mic</mat-icon>
@@ -179,7 +187,7 @@
                 Use your computer's built-in microphone, external microphone, or line-in.
             </li>
             <li>
-                <mat-icon aria-hidden="false" aria-label="Output">all_out</mat-icon>
+                <mat-icon aria-hidden="false" aria-label="Output">settings_input_hdmi</mat-icon>
                 <h1>Easy Output</h1>
                 Output to projector, tvs, LED screens, lighting hardware, mobile devices, and more.
             </li>
@@ -230,7 +238,12 @@
 </header>
 <div class="content-wrapper white">
     <div class="content-inner-wrapper big-only">
-        <app-htw style="margin:120px auto; display: block; box-shadow:0px 10px 60px 0px #aaa;"></app-htw>
+        <app-htw
+            style="margin:120px auto; background: #333; border-radius: 5px; display: block; box-shadow:0px 10px 60px 0px #aaa;">
+        </app-htw>
+        <!-- <p class="center">
+            If you're ready to learn more checkout the <a routerLink="/user-guide">User Guide</a>.
+        </p> -->
     </div>
 </div>
 
