--- a/src/app/canceled/canceled.component.html
+++ b/src/app/canceled/canceled.component.html
@@ -1,7 +1,7 @@
-<div class="content-wrapper">
+<div class="content-wrapper normal">
     <h1 class="center">CANCELED</h1>
     <h2>Sorry to see you go :(</h2>
-    <p>You can still use the software with the watermark. Feel free to contact us with feedback.</p>
+    <p>You can still use the software under the Non-Commercial license. Feel free to contact us with feedback.</p>
 
     <div class="clearfix"></div>
 </div>
