--- a/src/app/remote-cam/remote-cam.component.html
+++ b/src/app/remote-cam/remote-cam.component.html
@@ -6,7 +6,7 @@
     </button>
 
     <!-- Video For Camera Stream -->
-    <video class="cam" [ngClass]="{'user': facingMode == user }" #videoElement autoplay muted playsinline></video>
+    <video class="cam" [ngClass]="{'user': facingMode == 'user' }" #videoElement autoplay muted playsinline></video>
 
     <div class="message">
         <!-- Mobile: {{mobile}}<br>
