--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -158,7 +158,7 @@
     <div class="content-inner-wrapper">
         <ul class="big">
             <li>
-                <mat-icon aria-hidden="false" aria-label="Audio-Reactive">sync</mat-icon>
+                <mat-icon aria-hidden="false" aria-label="Audio-Reactive">equalizer</mat-icon>
                 <h1>Audio-Reactive</h1>
                 <strong>Real-time</strong> beat/amplitude detection and <strong>audio-reactive</strong> visual
                 playback.
@@ -195,6 +195,16 @@
                 <mat-icon aria-hidden="false" aria-label="Mobile Video">important_devices</mat-icon>
                 <h1>Mobile Video</h1>
                 Use mobile devices as remote cameras to achieve multiple video streams and angles.
+            </li>
+            <li>
+                <mat-icon aria-hidden="false" aria-label="Mobile Video">add_to_queue</mat-icon>
+                <h1>Multiple Displays</h1>
+                Easily create windows for multiple display support.
+            </li>
+            <li>
+                <mat-icon aria-hidden="false" aria-label="Mobile Video">featured_video</mat-icon>
+                <h1>Projection Mapping/Masking</h1>
+                Mask out what you don't want to easily map projections to targets.
             </li>
             <li>
                 <mat-icon aria-hidden="false" aria-label="Remote Control">settings_remote</mat-icon>
