--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!interactive" class="msg">
-    VISUALZ 2.0.1 is here! <a routerLink="/download">Get It Now</a>
+    VISUALZ v2 is here! <a routerLink="/download">Get It Now</a>
 </div>
 <header *ngIf="!interactive">
     <a routerLink="/" class="logo">VISUALZ</a>
@@ -18,7 +18,7 @@
 
         <button mat-button [matMenuTriggerFor]="menuT">TOOLS</button>
         <mat-menu #menuT="matMenu">
-            <button mat-menu-item routerLink="/download">VISUALZ v2.0.1</button>
+            <button mat-menu-item routerLink="/download">VISUALZ v2</button>
             <button mat-menu-item routerLink="/start">LIVE STREAM</button>
             <!-- <button mat-menu-item routerLink="/cc-video-library">CC VIDEO LIBRARY</button> -->
             <button mat-menu-item routerLink="/mp4-converter">GIF TO MP4 CONVERTER</button>
@@ -77,5 +77,5 @@
     <br>
     &copy; VISUALZ Copyright 2019-2020. All Rights Reserved.
     <br>
-    v2.0.1 created by <a href="https://karl.pb.studio" target="_blank">Karl</a>
+    v2.0.2 created by <a href="https://karl.pb.studio" target="_blank">Karl</a>
 </footer>
