--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -32,7 +32,7 @@
             <img src="../../assets/images/icon.ico" class="ico" />
 
             <div *ngIf="deviceInfo.os == 'Mac'" class="clearfix">
-                <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-2.0.2.dmg" target="_blank"
+                <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-2.0.3.dmg" target="_blank"
                     mat-raised-button (click)="downloadMac()" class="pink button">
                     Download Free
                 </a>
@@ -48,10 +48,10 @@
 
         </div>
         <div class="release-notes">
-            <h1>VISUALZ v2.0.2</h1>
+            <h1>VISUALZ v2.0.3</h1>
 
-            <div class="big-only">
-                <h2>What's New in Version 2.0.2</h2>
+            <div class="">
+                <h2>What's New in Version 2</h2>
                 <ul class='new'>
                     <li>Released April 2020.</li>
                     <li>Added visual effects.</li>
@@ -76,6 +76,20 @@
                     <li>Undo.</li>
                     <li>Much, much, more.</li>
                 </ul>
+                <div class="smaller">
+
+                    <!-- 4/15/20 -->
+                    <h2>Bugfixes 2.0.3</h2>
+                    <ul class='new'>
+                        <li>Issue on computers with high resolutions.</li>
+                    </ul>
+
+                    <!-- 4/14/20 -->
+                    <h2>Bugfixes 2.0.2</h2>
+                    <ul class='new'>
+                        <li>Video library loading issue.</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
