--- a/src/app/visualz/visualz.component.scss
+++ b/src/app/visualz/visualz.component.scss
@@ -16,3 +16,15 @@
         //list-style-type: circle;
     }
 }
+
+.smaller {
+    h2{
+        font-size: 12px;
+    }
+
+    ul {
+        li {
+            font-size: 10px;
+        }
+    }
+}
