--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper normal">
     <h1 class="center">
-        Download VISUALZ v2.0.2<br>
+        Download VISUALZ v2.0.3<br>
         Free for Non-Commercial Use
     </h1>
 
@@ -8,7 +8,7 @@
 
     <div class="bordered">
         <img class="mac" src="../../assets/images/macos.png" />
-        <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-2.0.2.dmg" target="_blank" mat-raised-button
+        <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-2.0.3.dmg" target="_blank" mat-raised-button
             (click)="downloadMac()" class="pink button">
             Download For Mac
         </a>
@@ -100,7 +100,8 @@
                 <li>OBS integration for Stream RTSP video to web.</li>
                 <li>Future Updates</li>
 
-                <li>Max output resolution 1280x1280.</li>
+                <li><s>Max output resolution 1280x1280.</s></li>
+                <li>Output resolution specification.</li>
 
 
             </ul>
