--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -82,6 +82,7 @@
                     <h2>Bugfixes 2.0.3</h2>
                     <ul class='new'>
                         <li>Issue on computers with high resolutions.</li>
+                        <li>Audio source selection bug</li>
                     </ul>
 
                     <!-- 4/14/20 -->
