--- a/src/app/remote-screen/remote-screen.component.html
+++ b/src/app/remote-screen/remote-screen.component.html
@@ -1,1 +1,2 @@
 <video id="externalVideo" class="external-video" autoplay muted controls></video>
+<!-- <img class="watermark" src="../../assets/images/watermark.png" /> -->
