--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -32,7 +32,7 @@
             <img src="../../assets/images/icon.ico" class="ico" />
 
             <div *ngIf="deviceInfo.os == 'Mac'" class="clearfix">
-                <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-2.0.3.dmg" target="_blank"
+                <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-2.0.4.dmg" target="_blank"
                     mat-raised-button (click)="downloadMac()" class="pink button">
                     Download Free
                 </a>
@@ -48,7 +48,7 @@
 
         </div>
         <div class="release-notes">
-            <h1>VISUALZ v2.0.3</h1>
+            <h1>VISUALZ v2.0.4</h1>
 
             <div class="">
                 <h2>What's New in Version 2</h2>
@@ -77,6 +77,12 @@
                     <li>Much, much, more.</li>
                 </ul>
                 <div class="smaller">
+
+                    <!-- 4/20/20 -->
+                    <h2>Changes 2.0.4</h2>
+                    <ul class='new'>
+                        <li>Stream to browser enabled for free use. Allows for remote OBS integration.</li>
+                    </ul>
 
                     <!-- 4/15/20 -->
                     <h2>Bugfixes 2.0.3</h2>
