--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper normal">
     <h1 class="center">
-        Download VISUALZ v2.0.3<br>
+        Download VISUALZ v2.0.4<br>
         Free for Non-Commercial Use
     </h1>
 
@@ -8,7 +8,7 @@
 
     <div class="bordered">
         <img class="mac" src="../../assets/images/macos.png" />
-        <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-2.0.3.dmg" target="_blank" mat-raised-button
+        <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-2.0.4.dmg" target="_blank" mat-raised-button
             (click)="downloadMac()" class="pink button">
             Download For Mac
         </a>
@@ -90,6 +90,8 @@
                 <li>Audio analysis and beat detection.</li>
                 <li>Visual effects.</li>
                 <li>Audio reactive visual effects.</li>
+                <li>Stream to browser.</li>
+                <li>OBS integration.</li>
                 <li>Camera support.</li>
                 <li>wRTC Mobile video support.</li>
                 <li>Smartphone remote control.</li>
@@ -97,7 +99,6 @@
                 <li>CC video library.</li>
                 <li>3d audio reactive visualizations.</li>
                 <li>Multiple screens.</li>
-                <li>OBS integration for Stream RTSP video to web.</li>
                 <li>Future Updates</li>
 
                 <li><s>Max output resolution 1280x1280.</s></li>
@@ -146,7 +147,6 @@
             </div>
             <ul class="features">
                 <li>All Non-Commercial &amp; Educational Features.</li>
-                <li>Stream to browser.</li>
                 <li>Audience contact collection.</li>
             </ul>
 
