--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,6 @@
 
         <button mat-button routerLink="/">HOME</button>
         <button mat-button routerLink="/about">ABOUT</button>
-        <button mat-button routerLink="/start">STREAM</button>
         <button mat-button routerLink="/download">GET IT NOW</button>
 
         <!-- <button mat-button [matMenuTriggerFor]="menu2">MARKET</button>
@@ -19,7 +18,7 @@
         <button mat-button [matMenuTriggerFor]="menuT">TOOLS</button>
         <mat-menu #menuT="matMenu">
             <button mat-menu-item routerLink="/download">VISUALZ v2</button>
-            <button mat-menu-item routerLink="/start">LIVE STREAM</button>
+            <button mat-menu-item routerLink="/start">LIVE STREAM IN BROWSER</button>
             <!-- <button mat-menu-item routerLink="/cc-video-library">CC VIDEO LIBRARY</button> -->
             <button mat-menu-item routerLink="/mp4-converter">GIF TO MP4 CONVERTER</button>
             <!-- <button mat-menu-item routerLink="/movie">MUSIC VIDEO CREATOR</button> -->
@@ -58,7 +57,7 @@
     <!-- <a routerLink="/events">Events</a> &nbsp;&nbsp;|&nbsp;&nbsp; -->
     <a routerLink="/">Home</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/about">About</a> &nbsp;&nbsp;|&nbsp;&nbsp;
-    <a routerLink="/start">Stream</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+    <a routerLink="/download">Get It Now</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/how-it-works">Help</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a routerLink="/support">Community</a> &nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="https://www.instagram.com/visualzapp/" target="_blank">Instagram</a>
@@ -77,5 +76,5 @@
     <br>
     &copy; VISUALZ Copyright 2019-2020. All Rights Reserved.
     <br>
-    v2.0.4 created by <a href="https://karl.pb.studio" target="_blank">Karl</a>
+    v2.0.5 created by <a href="https://karl.pb.studio" target="_blank">Karl</a>
 </footer>
