--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -43,8 +43,9 @@
 
     <div class="bordered">
         <img class="windows" src="../../assets/images/windows.png" />
-        <a disabled="disabled" mat-raised-button class="pink button">
-            Currently Unavailable
+        <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-Setup-2.0.5w.rar" mat-raised-button
+            class="pink button" target="_blank" (click)="downloadWindows()">
+            Download Windows
         </a>
         <p class="center">
             <a href="https://www.google.com/search?q=install+non+store+apps+windows+10&rlz=1C1CHBF_enUS840US840&oq=non-store+apps+win&aqs=chrome.2.69i57j69i60j0l4.8285j0j9&sourceid=chrome&ie=UTF-8"
