--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -42,7 +42,7 @@
             <div *ngIf="deviceInfo.os != 'Mac'" class="clearfix">
                 <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-Setup-2.0.5w.rar" target="_blank"
                     mat-raised-button (click)="downloadWindows()" class="pink button">
-                    Currently Unavailable
+                    Download Windows
                 </a>
                 <img class="windows" src="../../assets/images/windows.png" />
             </div>
