updates to a lot of styles and content

--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -15,23 +15,29 @@
         <p class="center">
             By downloading you accept the License Agreement
         </p>
+        <p class="center">
+            &nbsp;&nbsp;&nbsp;
+        </p>
         <div>
             <h3>MINIMUM REQUIREMENTS</h3>
             <p>
                 macOS 10.11 or higher
             </p>
-            <p>
+            <!-- <p>
                 <strong>GPUs</strong><br>
                 Nvidia GeForce 600 Series or better<br>
                 AMD Radeon or FirePro<br>
                 Intel HD4000 or better<br>
                 Mac Pro / iMac / Mac Mini mid-2012 or newer
-            </p>
+            </p> -->
             <p>
                 MacBook Air mid-2012 or newer
             </p>
             <p>
                 MacBook Pro (Retina) late-2012 or newer
+            </p>
+            <p>
+                SSD drive recommended for movie playback
             </p>
             <p>
                 Internet Connection
@@ -48,14 +54,21 @@
             Download Windows
         </a>
         <p class="center">
+            By downloading you accept the License Agreement
+        </p>
+        <p class="center">
             <a href="https://www.google.com/search?q=install+non+store+apps+windows+10&rlz=1C1CHBF_enUS840US840&oq=non-store+apps+win&aqs=chrome.2.69i57j69i60j0l4.8285j0j9&sourceid=chrome&ie=UTF-8"
                 target="_blank">Allow Non-Store Apps to Install on Windows 10</a>
         </p>
         <div>
             <h3>MINIMUM REQUIREMENTS</h3>
-            <p>Windows 7 SP1 / Windows 8 / Windows 10</p>
-            <p>Video RAM 1GB +</p>
             <p>
+                <!-- Windows 7 SP1 /  -->
+                Windows 8 /
+                Windows 10
+            </p>
+            <p>RAM 2GB</p>
+            <!-- <p>
                 <strong>Nvidia GPUs</strong><br>
                 GeForce 600 Series or better<br>
                 Quadro K Series or better
@@ -68,7 +81,7 @@
             <p>
                 <strong>Intel Integrated GPUs</strong><br>
                 Intel HD4000, HD5000 or better
-            </p>
+            </p> -->
             <p>
                 SSD drive recommended for movie playback
             </p>
@@ -78,7 +91,7 @@
         </div>
     </div>
 
-    <div class="content-wrapper dark">
+    <div class="content-wrapper dark clearfix">
         <div class="price_card">
             <div class="header">
                 <span class="name">NON-COMMERCIAL</span>
