--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,10 @@ gridster {
 
 h1 {
     margin-bottom: 40px;
+    
+    @media (max-width: $breakpoint-mobile) {
+        line-height: 42px;
+    }
 }
 
 h2 {
@@ -52,6 +56,15 @@ h3 {
     margin-top: 30px;
     text-align: left;
     font-size: 40px;
+}
+
+.email-txt {
+    line-height: 30px; 
+    font-size: 14px;
+
+    @media (max-width: $breakpoint-mobile) {
+
+    }
 }
 
 p {
@@ -104,6 +117,10 @@ p {
         width: calc(60% - 40px);
         float: left;
 
+        @media (max-width: $breakpoint-mobile) {
+            float: none;
+        }
+
         .macbook {
             //width: 90%;
             //margin: 0px auto;
@@ -111,8 +128,11 @@ p {
             float: left;
 
             @media (max-width: $breakpoint-mobile) {
-                margin-top: 100px;
-                margin-left: -140px;
+                width: 375px;
+                margin-top: 40px;
+                margin-left: 0px;
+                margin-bottom: 40px;
+                float:none;
             }
         }
     }
@@ -127,13 +147,21 @@ p {
         padding: 0 20px;
         width: 40%;
         float: left;
+        position: relative;
+        z-index: 1;
+
+        @media (max-width: $breakpoint-mobile) {
+            width: 100%;
+            float: none;
+        }
 
         h1 {
             font-size: 80px;
             margin: 40px 0 0 0px;
+            //text-shadow: 0 0 10px #ff4c89;
 
             @media (max-width: $breakpoint-mobile) {
-                font-size: 60px;
+                font-size: 50px;
             }
 
         }
@@ -143,7 +171,7 @@ p {
             text-align: left;
 
             @media (max-width: $breakpoint-mobile) {
-                font-size: 14px;
+                font-size: 22px;
             }
         }
 
