--- a/src/styles.scss
+++ b/src/styles.scss
@@ -349,6 +349,8 @@ p {
 
             mat-card-subtitle {
                 font-size: 10px;
+                line-height: 10px;
+                margin-top: -5px !important;
                 white-space: nowrap;
             }
         }
