--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -380,7 +380,11 @@
         <mat-card class="example-card" *ngFor="let item of collaborators">
             <mat-card-header>
                 <mat-card-title>{{item.name}}</mat-card-title>
-                <mat-card-subtitle>{{item.type}} [{{item.location}}]</mat-card-subtitle>
+                <mat-card-subtitle>
+                    {{item.type}}
+                    <br>
+                    {{item.location}}
+                </mat-card-subtitle>
             </mat-card-header>
             <img mat-card-image src="{{item.image}}" alt="{{item.name}}">
             <mat-card-actions>
@@ -389,6 +393,11 @@
         </mat-card>
 
         <div class="clearfix"></div>
+
+        <h2 style="line-height: 30px;">
+            Interested in collaborating?
+            <br>visualzapp.contact@gmail.com
+        </h2>
     </div>
 </div>
 
